web: fix youtube logo z-index

--- a/web/static/css/styles.css
+++ b/web/static/css/styles.css
@@ -623,5 +623,4 @@ header .profile-link {
     height: 100%;
     top: 0;
     left: 0;
-    z-index: 1;
 }
